RESOLVED FIXED215533
[AS Layout Tests] 6 WPT css-backgrounds tests consistently failing
https://bugs.webkit.org/show_bug.cgi?id=215533
Summary [AS Layout Tests] 6 WPT css-backgrounds tests consistently failing
Dean Jackson
Reported 2020-08-14 18:48:40 PDT
[AS Layout Tests] 6 WPT css-backgrounds tests consistently failing
Attachments
Patch (5.50 KB, patch)
2020-08-14 18:55 PDT, Dean Jackson
no flags
Dean Jackson
Comment 1 2020-08-14 18:49:07 PDT
Dean Jackson
Comment 2 2020-08-14 18:55:21 PDT
youenn fablet
Comment 3 2020-08-15 09:32:21 PDT
Comment on attachment 406647 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406647&action=review > Source/WebCore/svg/graphics/SVGImage.cpp:175 > + return IntSize(300, 150); Are these values used elsewhere? Is it worth using constants or a specific routine to document/centralize these values?
Dean Jackson
Comment 4 2020-08-16 11:56:30 PDT
Comment on attachment 406647 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406647&action=review >> Source/WebCore/svg/graphics/SVGImage.cpp:175 >> + return IntSize(300, 150); > > Are these values used elsewhere? Is it worth using constants or a specific routine to document/centralize these values? They are probably used in a bunch of spots, yeah. We could make a constant.
EWS
Comment 5 2020-08-16 12:11:11 PDT
Committed r265742: <https://trac.webkit.org/changeset/265742> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406647 [details].
Note You need to log in before you can comment on or make changes to this bug.