[AS Layout Tests] 6 WPT css-backgrounds tests consistently failing https://bugs.webkit.org/show_bug.cgi?id=215533 rdar://66660924

Reviewed by Youenn Fablet.

Source/WebCore:

A static_cast from float to int, where the float value is larger than MAX_INT, produces
different results on x86_64 and arm64e. Unfortunately, fixing this exposed the fact
that we were accidentally passing the tests below on Intel.

This commit addresses the casting issue and marks the tests as now accurately
failing. Details on the new bug at: webkit.org/b/206753

Covered by:
imported/w3c/web-platform-tests/css/css-backgrounds/background-size/vector/tall--contain--height.html
imported/w3c/web-platform-tests/css/css-backgrounds/background-size/vector/tall--contain--width.html
imported/w3c/web-platform-tests/css/css-backgrounds/background-size/vector/wide--contain--height.html
imported/w3c/web-platform-tests/css/css-backgrounds/background-size/vector/wide--contain--width.html

* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::containerSize const): Don't static_cast from float to int. Rather, use
the explicit IntSize constructor.

LayoutTests:

* TestExpectations: Mark some tests as failing.


Canonical link: https://commits.webkit.org/228313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265742 268f45cc-cd09-0410-ab3c-d52691b4dbfc